src/test/resources/testinput/cocos/invalid/invalidConditionsAreBooleanType.ocl
/* (c) https://github.com/MontiCore/monticore */

ocl invalidConditionsAreBooleanType {
   context boolean foo()
   pre: 1+1;
   post: foo;
}